 * @copyright       Copyright © 2023  - 2024 brambring.nl - All Rights Reserved
 * @license         GNU General Public License version 3 or later
 * This is the change log for the component com_blc, the content plugin plg_blc_content and the system plugin plg_system_blc
 */
/**
 * + Addition
 * - Removal
 * ^ Change
 * # Fix
 * ! Security
 * L Language
 * N Note
 */
__DEPLOY_VERSION__
 ^ sort options in header bar
 ^ made main package postgresql ready
 ^ Interface changes - ensure all plugins are updated as well
 # onBlcExtract: only set extractor name if the extractor actualy did some work
 # TagParser Corrected tag pattern for attributes with '-', fixed unquoted values for attributes
24.44.6443
 + Added bubble with count to the menu and dashboard BLC blocks
 - Removed the check on cron state. Now the pseudo cron will always show the broken count as bubble
24.44.6437
 + Added verbose logging to Log (enabled in global configuration under checkers)
 L Added missing lanuauge string for resuming scheduled tasks
 # Set live_site after exception
 # Added follow 301/302 to external checker (for google docs)
24.44.6420
 # Empty reports send
 ^ reworked the links filters. Think got all the deadlocks
24.44.6385
 ^ Reworked Reporting
24.44.6373
 ^ site url now as parameter in the component (pseudo live_site)
24.44.6372
 ^ Parked domain filters reworked
 ^ reworked 'check pending' state.
 ^ reworked filters (View & Fix Links) to show correct link count
 + Added ping function to external plugin
24.44.6355
 + Parked domain detection
24.44.6343
 ^ Code cleanup php-cs-fixer and phpcs
 ^ Removed public blcReport from system plugin. Replaced with onBlcReport event.
 + Added table (--print) output to CLI  blc:report
 + Added resume option to Scheduled Tasks
 + Added locking. only one running broken link checker per server/site
 # Added check to ensure the Reponse is valid multibye before trying to store it in the database.
 ^ Converter to Extractor to event
24.44.6312